<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloAlcool"
        android:layout_width="350dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:text="@string/tituloAlcool"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#4CAF50"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloGasolina"
        android:layout_width="346dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/tituloGasolina"
        android:textColor="#F44336"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAlcool"
        android:textAlignment="textEnd"
        android:gravity="end" />

    <TextView
        android:id="@+id/textViewOpcao"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/subtituloOpcao"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloGasolina" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputGasolina"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputAlcool">

        <EditText
            android:id="@+id/editTextNumberGasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintGasolina"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/textViewOpcao" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewResultado"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoCalcular" />

    <Button
        android:id="@+id/botaoCalcular"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="calcularMelhorOpcao"
        android:text="@string/botaoCalcular"
        android:textColor="#151415"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputGasolina" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAlcool"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpcao">

        <EditText
            android:id="@+id/editTextNumberAlcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintAlcool"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>